--- a/app/design/frontend/Dckap/lumachild/composer.json
+++ b/app/design/frontend/Dckap/lumachild/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "dckap/theme-frontend-luma-child",
+    "name": "dckap/theme-frontend-lumachild",
     "description": "N/A",
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/theme-frontend-blank": "100.0.*",
+        "magento/luma": "100.0.*",
         "magento/framework": "100.0.*"
     },
     "type": "magento2-theme",
-    "version": "100.0.1",
+    "version": "2.2.1",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
@@ -17,4 +17,5 @@
             "registration.php"
         ]
     }
-}
+
+    }
